# software-hardware-abstraction-layer

./: CMakeLists.txt  README.md  main.c  platforms.cmake
hal_contracts/: CMakeLists.txt  adc_hal.h  clock_hal.h  eic_hal.h  external_interrupt_controller_hal.h  gpio_hal.h  iic_hal.h  internal_interrupt_controller_hal.h  pwm_hal.h  timer_counter_hal.h  usart_hal.h
repeat_hello_world/: CMakeLists.txt
repeat_hello_world/tests/: CMakeLists.txt  test_repeat_hello_world.cpp
